[dollar] Dollar.java use chain factory